--- a/worksheets/genetic_data.rmd
+++ b/worksheets/genetic_data.rmd
@@ -2,7 +2,8 @@
 title: "Genetic data"
 author: Gibran Hemani
 output: 
-  pdf_document:
+  html_document:
+    theme: united
     highlight: tango
 ---
 
@@ -39,19 +40,19 @@ A binary plink dataset comprises three files:
 
 Navigate to the `data/genetic` directory 
 
-```
+```bash
 cd data/genetic
 ```
 
 Look at the files there
 
-```
+```bash
 ls -lh
 ```
 
 Look at the `geno_unclean.fam` file
 
-```
+```bash
 less geno_unclean.fam
 ```
 
@@ -78,14 +79,14 @@ id9 id9 0 0 1 -9
 
 The number of lines represents the number of individuals in the data
 
-```
+```bash
 wc -l geno_unclean.fam
 ```
 
 
 Look at the `geno_unclean.bim` file
 
-```
+```bash
 less geno_unclean.bim
 ```
 
@@ -113,20 +114,20 @@ It also contains 6 columns:
 
 The number of lines represents the number of SNPs in the data
 
-```
+```bash
 wc -l geno_unclean.bim
 ```
 
 How many chromosomes are there? How many SNPs are on each chromosome?
 
-```
+```bash
 cut -f 1 geno_unclean.bim | uniq -c
 ```
 
 
 The `geno_unclean.bed` file is much larger - it contains the compressed matrix of genotypes for each individual at each SNP. It is not human readable, but you can look at a small section by extracting it to a human readable format using plink:
 
-```
+```bash
 ../../software/plink_mac \
 --bfile geno_unclean \
 --chr 22 \
@@ -144,7 +145,7 @@ Let's take a look at this command.
 
 Now have a look at the created files
 
-```
+```bash
 less -S geno_unclean_chr22.ped
 ```
 
@@ -165,7 +166,7 @@ Each SNP is now represented by two columns - one column for each allele.
 
 The easiest way to calculate the allele frequency of each SNP is to use plink
 
-```
+```bash
 ../../software/plink_mac \
 --bfile geno_unclean \
 --freq \
@@ -174,7 +175,7 @@ The easiest way to calculate the allele frequency of each SNP is to use plink
 
 This produces a file called `geno_unclean.frq`
 
-```
+```bash
 less geno_unclean.frq
 ```
 
@@ -239,7 +240,7 @@ We want to filter the data to the following parameters:
 
 We can do all of this in plink like so:
 
-```
+```bash
 ../../software/plink_mac \
 --bfile geno_unclean \
 --maf 0.01 \
@@ -260,7 +261,7 @@ A note on these parameters:
 
 Note that the log from plink records what has been done:
 
-```
+```bash
 less geno_qc.log
 ```
 
@@ -271,7 +272,7 @@ In this case, a few SNPs were removed due to HWE and MAF.
 
 If there is a pair of individuals in the dataset who are related (e.g. cousins, siblings, duplicate samples etc) then we will want to discard one of the pair, so that the final dataset is comprised entirely of unrelated individuals. We will look at how this is done later on, but plink can do this as follows:
 
-```
+```bash
 ../../software/plink_mac \
 --bfile geno_qc \
 --rel-cutoff 0.025 \
@@ -293,7 +294,7 @@ Calculating PCs is sensitive to regions of high linkage disequilibrium. The corr
 
 This can be done as follows (no need to run this - the PCs have already been created)
 
-```
+```bash
 # pairwise LD pruning
 ../../software/plink_mac \
 --bfile data \
