--- a/worksheets/intro_to_r.rmd
+++ b/worksheets/intro_to_r.rmd
@@ -2,7 +2,8 @@
 title: "Intro to R"
 author: Gibran Hemani
 output: 
-  pdf_document:
+  html_document:
+    theme: united
     highlight: tango
 ---
 
@@ -296,6 +297,12 @@ monty <- function()
     )
     return(result)
 }
+```
+
+This function requires drawing random numbers (using the `sample` function). To make the results reproducible we should set the "random seed". This means that each time you run the result you will get the same answer.
+
+```{r}
+set.seed(12345)
 ```
 
 Here's how it works:
