--- a/index.rmd
+++ b/index.rmd
@@ -1,11 +1,16 @@
 ---
-title: "EEPE 2016: Genetics practicals"
-author: Gibran Hemani
+title: "Introduction to genetic and molecular epidemiology"
 output: 
   html_document:
     theme: united
     highlight: tango
 ---
+
+#### **EEPE 2016** : **University of Bristol** : **University of Queensland**
+
+#### **Gibran Hemani and Dave Evans**
+
+* * *
 
 Here you can find links to the data and the slides, as well as the worksheets for the practicals.
 
@@ -21,28 +26,23 @@ The lecture slides are hosted on Google Drive at this location:
 
 The data is hosted here:
 
-[EEPE 2016 data for practicals]()
+[EEPE 2016 data for practicals](https://drive.google.com/open?id=0B0vAR1k68I5fbDQ1TUxweWdwMDQ)
 
 
 ## Worksheets for practicals
 
 Links to the practicals are below:
 
-**Introduction to R** [mac](worksheets_mac/intro_to_r.html) or [win](worksheets_win/intro_to_r.html)
-
-**Genetic data** [mac](worksheets_mac/genetic_data.html) or [win](worksheets_win/genetic_data.html)
-
-**Genome wide association studies** [mac](worksheets_mac/gwas.html) or [win](worksheets_win/gwas.html)
-
-**Bioinformatics** [mac](worksheets_mac/bioinformatics.html) or [win](worksheets_win/bioinformatics.html)
-
-**Whole genomes** [mac](worksheets_mac/whole_genomes.html) or [win](worksheets_win/whole_genomes.html)
-
-**Epigenome wide association studies** [mac](worksheets_mac/ewas.html) or [win](worksheets_win/ewas.html)
+- *Introduction to R* [ [mac](worksheets_mac/intro_to_r.html) or [win](worksheets_win/intro_to_r.html) ]
+- *Genetic data* [ [mac](worksheets_mac/genetic_data.html) or [win](worksheets_win/genetic_data.html) ]
+- *Genome wide association studies* [ [mac](worksheets_mac/gwas.html) or [win](worksheets_win/gwas.html) ]
+- *Bioinformatics* [ [mac](worksheets_mac/bioinformatics.html) or [win](worksheets_win/bioinformatics.html) ]
+- *Whole genomes* [ [mac](worksheets_mac/whole_genomes.html) or [win](worksheets_win/whole_genomes.html) ]
+- *Epigenome wide association studies* [ [mac](worksheets_mac/ewas.html) or [win](worksheets_win/ewas.html) ]
 
 
 ## Source code
 
 You can find the source code for all the material here:
 
-[https://github.com/explodecomputer/EEPE_2016](https://github.com/explodecomputer/EEPE_2016/tree/gh-pages)
+[https://github.com/explodecomputer/EEPE_2016](https://github.com/explodecomputer/EEPE_2016)
